--- a/plugin.xml
+++ b/plugin.xml
@@ -48,7 +48,7 @@
             <visibleWhen>
                <!-- forcePluginActivation needed because else the property tester is not initialized -->
                <test
-                     forcePluginActivation="true"
+                     sforcePluginActivation="true"
                      property="nl.nnworks.nnembedded.project.nature.canAddNNEmbeddedNature">
                </test>
             </visibleWhen>
@@ -58,11 +58,11 @@
                label="Remove NNEmbedded nature"
                style="push">
             <visibleWhen>
-               <!-- forcePluginActivation needed because else the property tester is not initialized -->
-               <test
-                     forcePluginActivation="true"
+	           <!-- forcePluginActivation needed because else the property tester is not initialized -->
+	           <test
+	                 sforcePluginActivation="true"
                      property="nl.nnworks.nnembedded.project.nature.hasNNEmbeddedNature">
-               </test>
+              </test>
             </visibleWhen>
          </command>
       </menuContribution>
@@ -74,12 +74,12 @@
             class="nl.nnworks.nnembedded.project.nature.configuration.PropertyPage"
             id="nl.nnworks.nnembedded.project.nature.propertypage"
             name="NNEmbedded Properties">
-         <enabledWhen>
-            <test
-                  forcePluginActivation="true"
-                  property="nl.nnworks.nnembedded.project.nature.hasNNEmbeddedNature">
-            </test>
-         </enabledWhen>
+		<enabledWhen>
+		        <test 
+		              forcePluginActivation="true"
+		              property="nl.nnworks.nnembedded.project.nature.hasNNEmbeddedNature">
+		        </test>
+		</enabledWhen>
       </page>
    </extension>
 </plugin>
